# yellow-cards-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 5Fold-shuffle-DSC.ipynb  5Fold-shuffle-QM9.ipynb  5Fold-variable-DSC.ipynb  5Fold-variable-QM9.ipynb  5Fold-variable-QM9.py  data-preparation-DSC.ipynb  data-preparation-QM9.ipynb
project_filtering/: __init__.py  calculations.py  data_analysis.py  datasets.py  preprocessing.py  utils.py
src/yellow_cards_workflow/: __init__.py  calculations.py  data_analysis.py  models.py  preprocessing.py  utils.py
