[tool.poetry]
name = "project-filtering"
version = "0.1.0"
description = ""
authors = ["Mike Khrisanfov <khrisanfovmike@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
rdkit = "^2024.3.5"
matplotlib = "^3.9.1.post1"
torch = {version = "^2.4.0", source = "pytorch"}
catboost = "^1.2.5"
torch-geometric = "^2.5.3"
tabulate = "^0.9.0"
xlsxwriter = "^3.2.0"
torchinfo = "^1.8.0"
optuna = "^4.1.0"
optuna-dashboard = "^0.17.0"
mordredcommunity = "^2.0.6"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
torchinfo = "^1.8.0"
tensorboard = "^2.17.0"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
networkx = "^3.4.2"
graphviz = "^0.20.3"
torchviz = "^0.0.3"
torch-tb-profiler = "^0.4.3"
nbformat = "^5.10.4"
